added military integration

--- a/public/index.html
+++ b/public/index.html
@@ -87,8 +87,8 @@
                             <span class="action">Place selected hazard</span>
                         </div>
                         <div class="control-item">
-                            <span class="key">1-4</span>
-                            <span class="action">Fire / Bomb / Quake / Flood</span>
+                            <span class="key">1-5</span>
+                            <span class="action">Fire / Bomb / Quake / Flood / Sensor</span>
                         </div>
                         <div class="control-item">
                             <span class="key">A</span>
@@ -415,7 +415,8 @@
                 <div class="slot-icon flood-block"></div>
                 <span class="slot-key">4</span>
             </div>
-            <div class="hotbar-slot empty">
+            <div class="hotbar-slot" data-tool="sensor" title="Place Sensor">
+                <div class="slot-icon sensor-block"></div>
                 <span class="slot-key">5</span>
             </div>
             <div class="hotbar-slot empty">
