--- a/public/index.html
+++ b/public/index.html
@@ -293,12 +293,25 @@
                     <span class="pov-label">Vision:</span>
                     <span class="pov-value" id="pov-vision">-</span>
                 </div>
-                <div class="pov-dialogue" id="pov-dialogue">Select a person with tool 6 (POV)</div>
-            </div>
-        </div>
+                        <div class="pov-dialogue" id="pov-dialogue">Select a person with tool 6 (POV)</div>
+                    </div>
+                </div>
 
-        <div class="panel-section">
-            <div class="section-header">
+                <div class="panel-section">
+                    <div class="section-header">
+                        <div class="section-icon redstone"></div>
+                        <span>ALGO OVERLAY</span>
+                    </div>
+                    <div class="rl-log">
+                        <div class="rl-log-title">RL Decisions</div>
+                        <div id="rl-log-list" class="rl-log-list">
+                            <div class="rl-log-item">No decisions yet</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel-section">
+                    <div class="section-header">
                         <div class="section-icon map"></div>
                         <span>PYTHON TELEMETRY</span>
                     </div>
