add full pov new

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
                 <div class="title-plate">
                     <span class="title-text">EMERGENCY EVACUATION</span>
                 </div>
+                <div class="zero-goal">ZERO DEATHS TARGET</div>
                 <div id="alarm-indicator" class="alarm-off">
                     <span class="alarm-icon"></span>
                     <span class="alarm-text">ALARM OFF</span>
