--- a/public/index.html
+++ b/public/index.html
@@ -498,6 +498,26 @@
                     <span class="victory-label">Time:</span>
                     <span class="victory-value" id="victory-time">0:00</span>
                 </div>
+                <div class="victory-stat">
+                    <span class="victory-label">Critical Saves:</span>
+                    <span class="victory-value" id="victory-critical">0</span>
+                </div>
+                <div class="victory-stat">
+                    <span class="victory-label">Deaths Prevented:</span>
+                    <span class="victory-value" id="victory-prevented">0</span>
+                </div>
+                <div class="victory-stat">
+                    <span class="victory-label">Pheromone Avg (Safe/Danger):</span>
+                    <span class="victory-value" id="victory-pheromone">0 / 0</span>
+                </div>
+                <div class="victory-stat">
+                    <span class="victory-label">RL Decisions:</span>
+                    <span class="victory-value" id="victory-rl-decisions">0</span>
+                </div>
+                <div class="victory-stat">
+                    <span class="victory-label">Sensor Coverage:</span>
+                    <span class="victory-value" id="victory-coverage">0%</span>
+                </div>
             </div>
             <div class="victory-rating" id="victory-rating">
                 <!-- Stars will be added here -->
