--- a/public/index.html
+++ b/public/index.html
@@ -526,6 +526,11 @@
         </div>
     </div>
 
+    <!-- Legacy app.js for backwards compatibility -->
     <script src="app.js?v=2"></script>
+
+    <!-- Modern ES Modules version (uncomment to use instead of app.js)
+    <script type="module" src="js/main.js"></script>
+    -->
 </body>
 </html>
